# town-ops

./: .env.example  .gitattributes  .gitignore  .prettierrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy.yml  security-checks.yml
.husky/: pre-commit
apps/atoms/alert/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  vitest.config.ts
apps/atoms/alert/src/: email-templates.ts  env.ts  index.ts  mailer.ts  service.ts  validation-schemas.ts  worker.ts
apps/atoms/alert/src/database/: schema.ts
apps/atoms/alert/tests/integration/: alert.test.ts  db.test.ts  global-setup.ts
apps/atoms/alert/tests/unit/: email-templates.test.ts  index.test.ts  mailer.test.ts  worker.test.ts
apps/atoms/appointment/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  vitest.config.ts
apps/atoms/assignment/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
apps/atoms/assignment/src/: database.py  index.ts  main.py  models.py  publisher.py  routes.py  schemas.py  service.ts  validation-schemas.ts
apps/atoms/assignment/src/database/: db.ts  relations.ts  schema.ts
apps/atoms/assignment/tests/integration/: assignment.test.ts  conftest.py  global-setup.ts  test_assignment.py  test_assignment_integration.py
apps/atoms/assignment/tests/unit/: index.test.ts  test_assignment.py  test_assignment_unit.py
apps/atoms/auth/: .env.example  README.md  package.json  tsconfig.json  vitest.config.ts
apps/atoms/case/: .env.example  README.md  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
apps/atoms/contractor/: .env.example  Dockerfile  README.md  package.json  vitest.config.ts
apps/atoms/metrics/: .env.example  README.md  drizzle.config.ts  package.json  pyproject.toml
apps/atoms/proof/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  vitest.config.ts
apps/atoms/resident/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/composites/accept-job/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  package.json  pyproject.toml
apps/composites/accept-job/src/: clients.py  config.py  env.ts  index.ts  main.py  router.py  schemas.py  validation-schemas.ts
apps/composites/accept-job/tasks/: todo.md
apps/composites/accept-job/tests/: conftest.py
apps/composites/accept-job/tests/integration/: global-setup.ts  index.test.ts  test_accept_job.py
apps/composites/accept-job/tests/unit/: index.test.ts  test_accept_job.py  test_clients.py
apps/composites/assign-job/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/composites/assign-job/src/: consumer.py  consumer.ts  env.ts  index.ts  main.py  publisher.py  services.py  services.ts
apps/composites/assign-job/tests/integration/: assign-job.test.ts  global-setup.ts  test_assign_job.py
apps/composites/assign-job/tests/unit/: index.test.ts  test_assign_job.py  test_consumer.py  test_services.py
apps/composites/close-case/: .env.example  Dockerfile  README.md  app.py  package.json  pyproject.toml  requirements.txt  vitest.config.ts
apps/composites/close-case/services/: amqp.py  case_client.py  proof_client.py
apps/composites/close-case/src/: app.py  case_client.py  config.py  env.ts  index.ts  proof_client.py  schemas.py  validation-schemas.ts
apps/composites/close-case/tests/: conftest.py
apps/composites/close-case/tests/integration/: conftest.py  global-setup.ts  index.test.ts  test_close_case.py
apps/composites/close-case/tests/unit/: index.test.ts  test_clients.py  test_close_case.py
apps/composites/handle-breach/: .env.example  Dockerfile  README.md  mock_atoms.py  package.json  pyproject.toml  trigger_test_event.py  tsconfig.json  vitest.config.ts
apps/composites/handle-breach/src/: clients.py  config.py  env.ts  index.ts  main.py  router.py  validation-schemas.ts  worker.py  worker.ts
apps/composites/handle-breach/src/townops_handle_breach/: clients.py  main.py  router.py  schemas.py  worker.py
apps/composites/handle-breach/tests/: conftest.py
apps/composites/handle-breach/tests/integration/: conftest.py  global-setup.ts  handle-breach.test.ts  test_router.py
apps/composites/handle-breach/tests/unit/: index.test.ts  test_clients.py  test_handle_breach.py  test_worker.py
apps/composites/reschedule-job/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  vitest.config.ts
apps/composites/reschedule-job/src/: __init__.py  config.py  env.ts  index.ts  main.py  schemas.py  service.py  validation-schemas.ts
apps/composites/reschedule-job/tests/: conftest.py
apps/composites/reschedule-job/tests/integration/: test_reschedule_job.py  test_reschedule_job_integration.py
apps/composites/reschedule-job/tests/unit/: index.test.ts  test_reschedule_job.py
apps/frontend/: README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/server/: env.ts
docs/: README.md  architecture.md  case-lifecycle.md  deployment.md  event-flow.md  service-map.md  tech-stack.md
infrastructure/: docker-compose.yml
infrastructure/kong/: kong.yml
infrastructure/rabbitmq/: definitions.json
infrastructure/terraform/: apis.tf  artifact-registry.tf  cloud-run.tf  providers.tf  service-accounts.tf  variables.tf  vpc.tf  wif.tf
tests/e2e/: auth.spec.ts  contractor-dashboard.spec.ts  contractor.setup.ts  math.test.ts  officer-dashboard.spec.ts  officer.setup.ts  resident-reschedule.spec.ts
tests/integration/: global-setup.ts  scenario1-ideal-flow.test.ts  scenario2-sla-breach.test.ts  scenario3-no-access.test.ts  some-test.ts  vitest.config.ts
tooling/eslint/: eslint.config.js  eslint.config.mjs
tooling/lint-staged/: lint-staged.config.js
tooling/oxfmt/: .oxfmtrc.json
tooling/oxlint/: oxlint.config.ts
tooling/playwright/: playwright.config.ts
tooling/prettier/: prettier.config.js
tooling/ruff/: ruff.toml
tooling/vitest/: vitest.config.ts
(+189 files in other folders)
