[project]
name = "townops"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0",
    "opentelemetry-distro>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.uv.workspace]
members = [
    "apps/atoms/alert",
    "apps/atoms/appointment",
    "apps/atoms/assignment",
    "apps/atoms/metrics",
    "apps/atoms/proof",
    "apps/atoms/resident",
    "apps/composites/accept-job",
    "apps/composites/assign-job",
    "apps/composites/close-case",
    "apps/composites/handle-breach",
    "apps/composites/reschedule-job",
    "packages/shared-python",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "tooling/ruff/ruff.toml"
