[project]
name = "townops-alert"
version = "0.1.0"
description = "alert Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "httpx",
    "townops-shared",
]

[tool.uv]
managed = true
package = false

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
