[project]
name = "townops-assignment"
version = "0.1.0"
description = "assignment Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "townops-shared",
    "uvicorn",
    "aio-pika",
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
