[project]
name = "townops-assignment"
version = "0.1.0"
description = "assignment Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "townops-shared",
    "uvicorn",
    "aio-pika",
    "scalar-fastapi",
    "testcontainers[postgres]",
    "pytest",
    "httpx",
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "../../../packages/shared-python"
]
