[project]
name = "townops-accept-job"
version = "0.1.0"
description = "accept-job Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "townops-shared",
    "uvicorn",
    "aio-pika",
    "pyjwt",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "respx>=0.21.0",
    "anyio>=4.0.0",
    "pytest",
    "pytest-asyncio"
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
extraPaths = ["/Users/fazilakram/ESD/Documents/town-ops/.venv/lib/python3.14/site-packages"]
