[project]
name = "townops-accept-job"
version = "0.1.0"
description = "accept-job Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "townops-shared",
  "uvicorn",
  "aio-pika",
  "pyjwt",
  "httpx",
  "pydantic-settings",
  "python-dotenv",
  "respx",
  "anyio",
  "pytest",
  "pytest-cov",
  "scalar-fastapi",
]


[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["testcontainers[rabbitmq]>=4.14.2"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
