[project]
name = "townops-close-case"
version = "0.1.0"
description = "close-case Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "townops-shared",
    "uvicorn",
    "aio-pika",
    "pyjwt",
    "httpx",
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
