[project]
name = "townops-close-case"
version = "0.1.0"
description = "close-case Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "townops-shared",
    "uvicorn",
    "aio-pika",
    "pyjwt",
    "httpx",
    "pydantic-settings",
    "python-dotenv",
    "respx",
    "anyio",
    "pytest",
    "scalar-fastapi"
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
