[project]
name = "townops-handle-breach"
version = "0.1.0"
description = "handle-breach Service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "townops-shared",
]

[tool.uv]
managed = true

[tool.uv.sources]
townops-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
