[project]
name = "reschedule-job"
version = "0.1.0"
description = "Reschedule Job composite microservice for HDBCare"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.30.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.5.0",
    "httpx==0.26.0",
    "aio-pika==9.1.0",
    "opentelemetry-api==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-instrumentation-fastapi==0.45b0",
    "opentelemetry-exporter-otlp==1.24.0",
    "python-dateutil==2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.1.0",
    "httpx[http2]==0.26.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
